Put more suited button content

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <input type="text" name="second" id="second" required>
                 </li>
                 <li>
-                    <button>Submit</button>
+                    <button>Start</button>
                 </li>
             </ul>
         </form>
